<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondActivity" android:id="@+id/constraintLayout">

    <TextView
            android:text="@string/message_received"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_second_message"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_message"
            app:layout_constraintTop_toBottomOf="@+id/tv_second_message" app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    />

    <Button
            android:text="@string/reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="returnReply"
            android:id="@+id/btn_second_reply" app:layout_constraintStart_toEndOf="@+id/et_second_reply"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/et_second_reply" app:layout_constraintEnd_toStartOf="@+id/btn_second_reply"
            android:inputType="textLongMessage" android:hint="@string/editText_second"
    />
</androidx.constraintlayout.widget.ConstraintLayout>