<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/constraintLayout2">

    <TextView
            android:text="@string/reply_received"
            android:layout_width="wrap_content"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:id="@+id/tv_text_header_reply"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_reply"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_header_reply"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    />

    <Button
            android:text="@string/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="launchSecondActivity"
            android:id="@+id/btn_main" app:layout_constraintStart_toEndOf="@+id/et_main"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/et_main" app:layout_constraintEnd_toStartOf="@+id/btn_main"
            android:inputType="textLongMessage"
            android:hint="@string/enter_your_message_here"
    />
</androidx.constraintlayout.widget.ConstraintLayout>